syntax = "proto3";

option go_package = "./;transport";

package transport;

service AliasService {
  rpc CreateAlias (URLRequest) returns (AliasResp);
  rpc GetOrigURL (AliasReq) returns (OriginalURLResp);
}

message AliasReq {
  string alias = 1;
}

message AliasResp {
  string alias = 1;
}

message URLRequest {
  string original = 1;
}

message OriginalURLResp {
  string original_url = 1;
}
